# kiker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Debug/: Zbijak  makefile  objects.mk
Debug/res/shaders/: line.vert  shader.vert
Debug/src/: Camera.d  Line.d  Mesh.d  Model.d  Rectangle.d  ShaderProgram.d  Shape.d  main.d  subdir.mk
res/model/dirt/: dirt.mtl
res/model/plane/: plane.mtl
res/shader/: color.frag  color.vert  dummy.frag  shader-unix.frag  shader-unix.vert  shader.frag
res/shaders/: blank.frag
src/: Camera.cpp  Camera.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rectangle.cpp  Rectangle.h  ShaderProgram.cpp  ShaderProgram.hpp  Shape.cpp  Shape.h  main.cpp
